src/test/ui/resolve/issue-21221-2.stderr
error[E0405]: cannot find trait `T` in this scope
  --> $DIR/issue-21221-2.rs:28:6
   |
28 | impl T for Foo { }
   |      ^ not found in this scope
help: possible candidate is found in another module, you can import it into scope
   |
11 | use foo::bar::T;
   |

error[E0601]: main function not found

error: cannot continue compilation due to previous error

